--- a/views/comanda/comNetBar.ejs
+++ b/views/comanda/comNetBar.ejs
@@ -5,9 +5,9 @@
             <div class="col-lg-3 mt-3">
                 <ul class="list-group">
                     <li class="list-group-item">
-                        Nr. Comandă <%=el.index%>
+                       Order Nr. <%=el.index%>
                     </li>
-                    <li class="list-group-item"><strong style="font-size:19px;">Produse:</strong></li>
+                    <li class="list-group-item"><strong style="font-size:19px;">Products:</strong></li>
                     <% el.produse.forEach((el)=>{%>
 
                         <li class="list-group-item">
