--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -23,11 +23,13 @@
   <link rel="stylesheet" href="/stylesheets/nom.css">
   <link rel="stylesheet" href="/stylesheets/rapoarte.css">
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="/stylesheets/recipe.css">
+  <link rel="stylesheet" href="/stylesheets/dashboard.css">
 </head>
 </head>
 
 <body class="d-flex flex-column vh-100">
-  <%- include('../partials/navbar')%>
+
     <main class="container">
       <%- include('../partials/flash') %>
 
