--- a/views/locatie/login.ejs
+++ b/views/locatie/login.ejs
@@ -2,16 +2,16 @@
 
     <form action="/locatie/login" method="POST" novalidate class="validated-form">
         <div class="card col-lg-3 offset-lg-4" style="width: 26rem; padding:8px 8px 8px 8px; margin-top: 200px;">
-            <h3 class="text-center">Intră în locație</h3>
+            <h3 class="text-center">Shop login</h3>
             <div class="">
-                <label for="locatie" class="form-label">Locație</label>
+                <label for="locatie" class="form-label">Shop</label>
                 <input type="text" class="form-control" name="username" id="locatie" aria-describedby="locatie"
                     required>
             </div>
             <div class="mb-3">
-                <label for="password" class="form-label">Parolă</label>
+                <label for="password" class="form-label">Password</label>
                 <input type="password" name="password" class="form-control" id="password" required>
             </div>
-            <button type="submit" class="btn btn-success">Intră</button>
+            <button type="submit" class="btn color1">Login</button>
         </div>
     </form>
