--- a/views/produsEdit.ejs
+++ b/views/produsEdit.ejs
@@ -1,47 +1,63 @@
 <% layout('layouts/boilerplate') %>
 
+<style>
+    #delIcon{
+        margin-left: 92%;
+        font-size: 25px;
+        color: red;
+        cursor: pointer;
+    }
+</style>
+
     <div class="container-fluid mt-5">
-        <h1 class="text-center">Modifica Produs</h1>
         <div class="row">
-            <div class="col-md-6 offset-md-3">
+            <div class="card col-lg-6 offset-lg-4" style="width: 28rem; padding:8px 8px 8px 8px; margin-top: 20px; border: none;">
+                <form action="/produs/modifica/<%=produs._id%>?_method=DELETE" method="POST" id="delForm">
+                    <i class="bi bi-trash3" id="delIcon"></i>
+                </form>
+                <h3 class="text-center">Edit Product</h3>
                 <form action="/produs/modifica/<%=produs._id%>?_method=PUT" method="POST" novalidate
-                    class="validated-form">
-                    <label class="fs-5" for="nume">Denumire</label>
+                    class="validated-form" enctype="multipart/form-data">
+                    <label class="fs-5" for="nume">Name</label>
                     <div class="input-group mb-3">
                         <input type="text" name="produs[nume]" id="nume" class="form-control"
-                            placeholder="Denumire Produs" aria-describedby="basic-addon1" value="<%=produs.nume%>"
+                             aria-describedby="basic-addon1" value="<%=produs.nume%>"
                             required>
                     </div>
-                    <label class="fs-5" for="pret">Preț</label>
+                    <label class="fs-5" for="pret">Price</label>
                     <div class="input-group mb-3">
-                        <input type="text" name="produs[pret]" id="pret" class="form-control" placeholder="Pret"
+                        <input type="text" name="produs[pret]" id="pret" class="form-control"
                             aria-describedby="basic-addon1" value="<%=produs.pret%>" required>
                     </div>
                     <label class="fs-5" for="departament">Departament</label>
                     <div class="input-group mb-3">
                         <select class="form-select" name="produs[departament]" aria-label="Default select example"
-                            placeholder="departament" required>
-                            <option value="1">Marfuri</option>
-                            <option value="2" selected>Preparate</option>
-                            <option value="3">Servicii</option>
-                            <option value="4">Tips</option>
-                        </select>
-                        <% if(session.passport.user.platitorTva){%>
-                            <select class="form-select" name="produs[cotaTva]" aria-label="Default select example"
-                                required>
-                                <option value="">Alege Cota Tva</option>
-                                <option value="19">19%</option>
-                                <option value="9">9%</option>
-                                <option value="5">5%</option>
-                            </select>
-                            <% } %>
-                    </div>
+                        placeholder="departament" required>
+                        <option value="1" <% if (produs.departament === '1') { %>selected<% } %> >Marfuri</option>
+                        <option value="2" <% if (produs.departament === '2') { %>selected<% } %> >Preparate</option>
+                        <option value="3" <% if (produs.departament === '3') { %>selected<% } %> >Servicii</option>
+                        <option value="4" <% if (produs.departament === '4') { %>selected<% } %> >Tips</option>
+                    </select>
+                    <% if(session.passport.user.platitorTva){%>
+                        <select class="form-select" name="produs[cotaTva]" aria-label="Default select example"
+                        required>
+                        <option value="">Alege Cota Tva</option>
+                        <option value="19">19%</option>
+                        <option value="9">9%</option>
+                        <option value="5">5%</option>
+                    </select>
+                    <% } %>
+                </div>
+                
+                    <label class="fs-5" for="imagine">Image</label>
+                    <input type="file" name="imagine" class="form-control mb-3" id="imagine">
+                
 
-                    <span style="font-size:20px; margin: 0 0 0 270px;">Rețetă</span>
+                    <span style="font-size:20px; margin: 0 0 0 40%;">Recipe</span>
                     <div class="row mt-3">
-                        <span class="col-lg-4">Denumire</span>
-                        <span class="col-lg-4">Cantitate</span>
-                        <span class="col-lg-4">Pret</span>
+                        <span class="col-lg-4">Name</span>
+                        <span class="col-lg-4">Quantity</span>
+                        <span class="col-lg-4">Price</span>
                     </div>
                     <% produs.ingrediente.forEach(function(el) { %>
                         <div class="input-group mb-3">
@@ -53,15 +69,23 @@
                                 aria-describedby="basic-addon1" value="<%=el.pret%>" readonly="true" required>
                         </div>
                         <% }) %>
-
-                            <button class="btn btn-lg btn-info">Modifică</button>
-                </form>
-
-                <form action="/produs/modifica/<%=produs._id%>?_method=DELETE" method="POST">
-                    <button class="btn btn-lg btn-danger mt-4">Sterge</button>
+                        <div class="d-grid gap-2">
+                        <button class="btn color">
+                            <i class="bi bi-pencil-square"></i>
+                            Edit
+                        </button>
+                        </div>
                 </form>
             </div>
 
 
         </div>
     </div>
+
+    <script>
+        const form = document.getElementById('delForm')
+        const button = document.getElementById('delIcon')
+        button.addEventListener('click', (e)=> {
+            form.submit()
+        })
+    </script>
