--- a/public/stylesheets/nom.css
+++ b/public/stylesheets/nom.css
@@ -9,17 +9,39 @@
     width: 100%;
     margin: 30px 130px auto auto;
 }
-.wrap .search-input{
+.wrap .nomenclator-search{
     background: #fff;
     width: 100%;
     border-radius: 5px;
     box-shadow: 0 1px 5px 3px rgba(0,0,0,0.12);
 }
+.nomenclator-search input{
+    height: 55px;
+    width: 100%;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    padding: 0 20px 0;
+    font-size: 18px;
+    box-shadow: 0 1px 5px rgba(0,0,0,0.1);
+}
+.icon i{
+    height: 55px;
+    width: 55px;
+    line-height: 55px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center;
+    font-size: 20px;
+    color: #778da9;
+    cursor: pointer;
+}
 
 .nomenclator {
     max-height: 100%;
     width: auto;
-    background-color: #fae0e4;
+    background-color: #e0d4c9;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -29,7 +51,7 @@
 .nomenclator1{
     max-height: 100%;
     width: auto;
-    background-color: #fae0e4;
+    background-color: #e0d4c9;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
