--- a/views/locatie/registerUser.ejs
+++ b/views/locatie/registerUser.ejs
@@ -2,7 +2,7 @@
 
     <form action="/locatie/user/register" method="POST" novalidate class="validated-form">
         <div class="card col-lg-3 offset-lg-4" style="width: 26rem; padding:8px 8px 8px 8px; margin-top: 50px;">
-            <h3 class="text-center mb-5"> Înregistrează-te!</h3>
+            <h3 class="text-center mb-5">Register</h3>
             <div class="">
                 <label for="username" class="form-label">Username (Nume folosit în aplicatie)</label>
                 <input type="text" name="user[username]" class="form-control" id="username" required>
@@ -31,6 +31,6 @@
                 <label for="confirmPassowrd" class="form-label">Confirmă Parolă</label>
                 <input type="password" name="user[confirmPassword]" class="form-control" id="confirmPassword" required>
             </div>
-            <button type="submit" class="btn btn-primary">Înregistrează-te</button>
+            <button type="submit" class="btn color1">Register</button>
         </div>
     </form>
